name:                tmuxmarta
version:             0.1.0.0
synopsis:            display MARTA info in byobu status line
description:         Please see README.md
homepage:            https://github.com/shapr/tmuxmarta#readme
license:             GPL3
license-file:        LICENSE
author:              Shae Erisson
maintainer:          shae@ScannedInAvian.com
copyright:           GPL3
category:            fun
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.2.1
                     , unordered-containers >= 0.2.7.2
                     , lens
                     , aeson
                     , bytestring
                     , wreq
                     , directory
  default-language:    Haskell2010

executable tmuxmarta-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       aeson
                     , base
                     , bytestring
                     , text >= 1.2.2.1
                     , tmuxmarta
                     , unordered-containers >= 0.2.7.2
  default-language:    Haskell2010

test-suite tmuxmarta-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text >= 1.2.2.1
                     , tmuxmarta
                     , unordered-containers >= 0.2.7.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shapr/tmuxmarta
